--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     </nav>
 
    <div class="main row">
-		<div class="six column" >
+		<div class="six column" style="display: flex; flex-direction: column; align-items: center;">
 
       <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2020-21 </h4>
-      <h4 align="center">Results will be declared soon.      </h4>
+      <a href="result.html" class="button button-primary" style="width: 300px;">Results of Prelimnary Round</a>
       <br><br><br>
 		 <h4 align="center">About Aryabhat Foundation</h4>
 			<p>
