Fix the date and time, justify text

--- a/declareresult.html
+++ b/declareresult.html
@@ -59,7 +59,7 @@
 					      return new Promise(resolve => setTimeout(resolve, ms));
 					   }
 		  			console.log("in animate()");
-            async function banana() {
+            async function ResultAnimation() {
             var nameData = [
               "Keshav Jhunjhunwala",
               "Utkarsh Singh",
@@ -147,7 +147,7 @@
             }
         }
 
-        banana();
+          ResultAnimation();
 		  		</script>
 
 		 </div>
