--- a/pressofbutton.html
+++ b/pressofbutton.html
@@ -40,10 +40,10 @@
   		</div>
   	</div>
 
-   <div class="main row">   	
-		<div class="nine columns" >
-      <p>To be declared by Press of Button in the auspicious hand of Dr. Erika Hamden on September _, 2020 at __ IST.</p>
-      <p>Dr. Erika Hamden is an eminent astrophysicist with a focus on Ultraviolet (UV) Detection, Spectroscopy, and Galaxy Evolution. She is a Professor of Astrophysics at the University of Arizona, US, and a 2019 TED fellow.</p>
+   <div class="main row">
+		<div class="nine columns" style="display: flex; flex-direction: column; align-items: center; text-align: justify;">
+      <p>To be declared by Press of Button in the auspicious hand of Dr. Erika Hamden on September 26, 2020 at 8:30 PM IST.</p>
+      <p>Dr. Erika Hamden is an eminent astrophysicist with a focus on Ultraviolet (UV) Detection, Spectroscopy, and Galaxy Evolution. She is an Assistant Professor of Astrophysics at the University of Arizona, US, and a 2019 TED fellow.</p>
       <p>Aryabhat Astronomy Quiz is in its 24th successful year today. In the current year's Quiz, the preliminary test was conducted online for a total of 3927 students from 248 schools from across the state of Madhya Pradesh, India</p>
 
 		<script type="text/javascript">
@@ -60,13 +60,13 @@
 		        // return true or false, depending on whether you want to allow the `href` property to follow through or not
 		    }
 		</script>
-       <p align="center">Enter Key <input id="key" maxlength="4" size="4" style="color:#222;height:18px;" type="text"/>  <a style="padding:0.2em 1.4em 1.4em 1.4em;font-size:1em;" class="button button-primary" onclick="return p();" href="#"> Go!</a></p>
+       <p align="center">Enter Key <input id="key" maxlength="4" size="4" style="color:#222;height:18px;" type="text"/>  <a style="padding:0.2em 1.4em 1.4em 1.4em;font-size:1em;height:37px;" class="button button-primary" onclick="return p();" href="#"> Go!</a></p>
 		 </div>
 
 		<div class="three columns" >
 			<img class="value-img" src="files/2020/DrErika.jpeg" width="300" height="100">
 		</div>
-		 
+
     </div>
     <div class="row" >
   		<p> &copy; Aryabhat Foundation &middot;</p>
