--- a/result.html
+++ b/result.html
@@ -41,10 +41,10 @@
   	</div>
 
    <div class="main row">
-		<div class="nine columns" style="display: flex; flex-direction: column; align-items: center;">
+		<div class="nine columns" style="display: flex; flex-direction: column; align-items: center; text-align: justify;">
       <div style="width: 100%;">
-      <p>The result will be declared in the auspicious hands of Dr. Erika Hamden on September 27, 2020 at 20:00 IST.</p>
-      <p>Dr. Erika Hamden is an eminent astrophysicist with a focus on Ultraviolet (UV) Detection, Spectroscopy, and Galaxy Evolution. She is a Professor of Astrophysics at the University of Arizona, US, and a 2019 TED fellow.</p>
+      <p>The result will be declared in the auspicious hands of Dr. Erika Hamden on September 26, 2020 at 8:30 PM IST.</p>
+      <p>Dr. Erika Hamden is an eminent astrophysicist with a focus on Ultraviolet (UV) Detection, Spectroscopy, and Galaxy Evolution. She is an Assistant Professor of Astrophysics at the University of Arizona, US, and a 2019 TED fellow.</p>
       <p>Aryabhat Astronomy Quiz is in its 24th successful year today. In the current year's Quiz, the preliminary test was conducted online for a total of 3927 students from 248 schools from across the state of Madhya Pradesh, India</p>
       </div>
       <a href="https://youtu.be/Y4tDzvO9c0s" class="button button-primary" style="width: 300px;">Watch the Ceremony on YouTube</a>
