--- a/pressofbutton.html
+++ b/pressofbutton.html
@@ -44,7 +44,7 @@
 		<div class="nine columns" style="display: flex; flex-direction: column; align-items: center; text-align: justify;">
       <p>To be declared by Press of Button in the auspicious hand of Dr. Erika Hamden on September 26, 2020 at 8:30 PM IST.</p>
       <p>Dr. Erika Hamden is an eminent astrophysicist with a focus on Ultraviolet (UV) Detection, Spectroscopy, and Galaxy Evolution. She is an Assistant Professor of Astrophysics at the University of Arizona, US, and a 2019 TED fellow.</p>
-      <p>Aryabhat Astronomy Quiz is in its 24th successful year today. In the current year's Quiz, the preliminary test was conducted online for a total of 3927 students from 248 schools from across the state of Madhya Pradesh, India</p>
+      <p>Aryabhat Astronomy Quiz is in its 24th successful year today. In the current year's Quiz, the preliminary test was conducted online for a total of 3927 students from 248 schools from across the state of Madhya Pradesh, India.</p>
 
 		<script type="text/javascript">
 		    function p () {
