Fix spelling mistake in results

--- a/result.html
+++ b/result.html
@@ -109,7 +109,7 @@
               "Aditya Tiwari",
               "Ved Meshram",
               "Abhineet Bansal",
-              "Hiyanahi Nema",
+              "Hiyanshi Nema",
               "Medha Srishti Abboju",
               "Mohd Nazim Khan",
               "Ritik Singh",
@@ -184,7 +184,7 @@
     		<h4 align="center"><a target="_" class="button-primary button" href="files/2020/Participation_2020-21.pdf">Participation Summary</a></h4>
 	    	</div>
     	<div class="six columns">
-    		<h4 align="center"><a target="_" class="button-primary button" href="files/2020/Merit-List.pdf">Preliminary Merit</a></h4>
+    		<h4 align="center"><a target="_" class="button-primary button" href="files/2020/Preliminary_Merit_2020-21.pdf">Preliminary Merit</a></h4>
 
     	</div>
     </div>
