Added notice of participation certificate

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
    <div class="main row">
 		<div class="six column" style="display: flex; flex-direction: column; align-items: center;">
 
+
       <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2020-21 </h4>
+       For participants of Aryabhat Astronomy Quiz 2020-21  <p >     
+Participation Certificates of students who have secured positive marks have been mailed to their registered email ID. Kindly check. <br>Request to send it through any other medium will not be entertained.</p>
+      </p>
       <a href="result.html" class="button button-primary" style="width: 300px;">Results of Prelimnary Round</a>
       <br><br><br>
 		 <h4 align="center">About Aryabhat Foundation</h4>
