--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 
 
       <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2020-21 </h4>
-       For participants of Aryabhat Astronomy Quiz 2020-21  <p >     
-Participation Certificates of students who have secured positive marks have been mailed to their registered email ID. Kindly check. <br>Request to send it through any other medium will not be entertained.</p>
-      </p>
+      <b>Note for Participants of Aryabhat Astronomy Quiz 2020-21 </b> 
+      <p >     
+Your Certificates of Participation have been mailed to your registered email ID. 
+We shall not be able to send them by any other means.</p>
       <a href="result.html" class="button button-primary" style="width: 300px;">Results of Prelimnary Round</a>
       <br><br><br>
 		 <h4 align="center">About Aryabhat Foundation</h4>
