--- a/quiz.html
+++ b/quiz.html
@@ -39,7 +39,6 @@
           <li class="navbar-item current"><a class="navbar-link" href="quiz.html">Online Quiz</a></li>
           <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
           <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="news.html">News</a></li>
           <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
         </ul>
 
@@ -47,8 +46,19 @@
     </nav>
 
    <div class="main row">
+    <div class="six column"  style="display: flex; flex-direction: column; align-items: center;" >
+      <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2020-21 </h4>
+      <b>Note for Participants of Aryabhat Astronomy Quiz 2020-21 </b> 
+      <p >     
+Your Certificates of Participation have been mailed to your registered email ID. 
+We shall not be able to send them by any other means.</p>
+      <a href="result.html" class="button button-primary" style="width: 300px;">Results of Prelimnary Round</a>
+      <br><br><br>
+      </div>
+   </div>
+   <div class="main row">
 		<div class="six column" >
-      <a href="https://quiz.aryabhat.org/accounts/login/" class="button button-primary">Registered User Login</a>
+
       <h2>Details of the Quiz</h2>
       <h3> The Organisation :</h3>
       <p>Aryabhat Foundation is a special endeavor for promotion of Astronomy and Basic Science. The movement had started in 1995, which has now taken a shape of a duly registered social service organisation. Backed by a group of people dedicated to their duties towards the society, the organisation is committed to make learning Basic Science more enjoyable for the youngsters, thus urging them to develop a science based temperament.</p>
