volunteer form and pdf added

--- a/download.html
+++ b/download.html
@@ -63,27 +63,13 @@
           Others
         </td>
         <td>
-          <a class="button button-primary" target="_blank" href="files/Volunteer.pdf">Volunteer Application Form</a>
+          <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application Form</a>
         </td>
       </tr>
 		</table>
-		<h4>Become a Volunteer!</h4>
-		<p>
-		Aryabhat strives to reach out every quarter of the society with word of science which is mandatory to eradicate myths and superstitions from amongst the society. In absence of proper scientific information, the ignorant genera would fall victims to illicit persons. This not only counts heavily on their pockets but sometimes cost them even repute and even life. </p>
-<p>
-Aryabhat propels the noble movement to pass on proper scientific information to this vulnerable sector of the society. In order to achieve this goal, we enroll student volunteers who are very effective in conveying the message of science in their circle especially amongst the young generation. We strongly believe that the scientific notion inculcated in the young minds will lay the foundation of a healthier and stronger society.  </p>
-<p>
-There is no specific qualification required for becoming a volunteer. Any person who has a love for science can apply for it.
-</p>
-<p>
-Volunteers are given free training in practical astronomy and science communication at our Bhopal centre. In this training volunteers get hands-on experience over large telescopes and learn to read the position of stars in the night sky. They also learn safe methods to observe and study the Sun in the day time. We also teach them techniques of astrophotography using telescopes and DSLR Cameras. Group discussions and personal interactions are also conducted as tools  to resolve the doubts. 
-</p>
-<p>
-Volunteers are invited for training in small batches and they recide in homely atmosphere. Aryabhat would not pay any TA/DA to the volunteers. Also, Aryabhat will not be able to provide hospitality to accompanying parents or teachers. The stay and food for volunteers would be free of cost.
-</p>
-<p>
-Volunteers can also take part in construction and designing of telescopes and astronomical equipments on the projects going on and if feasible, they will also pay a visit to Regional Science Centre Bhopal. The aim is to enable them as ambassadors of science.
-		</p>
+		
 		 </div>
     </div>
     <div class="row" >
