Notice section added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
     </nav>
 
    <div class="main row">
-		<div class="six column" style="display: flex; flex-direction: column; align-items: center;">
+    <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
+      <h4>Notices</h4>
+      <p>
+<b>Results for Astro Quiz 2020-21 Declared! </b><br>
+Congratulations to all the winners. A girl has topped this astro quiz again after 23 years !<br><br>
+<a target="_" class="button button-primary" href="files/2020/MeritList2020.pdf">Merit List</a>
+      </p>
+    </div>
+		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
 		 <h4 align="center">About Aryabhat Foundation</h4>
 			<p>
 				Aryabhat foundation is a special endeavor for promotion of Basic Science. The movement started in 1995, which has now taken a shape of a duly registered social service organisation. Supported by a group of people dedicated to their duties towards the society, the organisation is committed to serving Basic Science in a tasty way to the youngsters. This will inculcate a science-based temperament in them.
