--- a/quiz.html
+++ b/quiz.html
@@ -46,15 +46,15 @@
     </nav>
 
    <div class="main row">
-    <div class="six column"  style="display: flex; flex-direction: column; align-items: center;" >
-      <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2020-21 </h4>
+    <!--div class="six column"  style="display: flex; flex-direction: column; align-items: center;" >
+      <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2021-22 </h4>
       <b>Note for Participants of Aryabhat Astronomy Quiz 2020-21 </b> 
       <p >     
 Your Certificates of Participation have been mailed to your registered email ID. 
 We shall not be able to send them by any other means.</p>
       <a href="result.html" class="button button-primary" style="width: 300px;">Results of Prelimnary Round</a>
       <br><br><br>
-      </div>
+      </div-->
    </div>
    <div class="main row">
 		<div class="six column" >
@@ -82,26 +82,36 @@ We shall not be able to send them by any other means.</p>
       <p>The final-winners of the quiz shall visit the observatory of their choice from those at Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners on the basis of overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
 
       <h3>How to prepare :</h3>
-      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy.The senior students of Aryabhat have compiledspecific Study Material and Demo Quiz which will be available to all the participants on post login screen. Registered participants can also seek guidance on WhatsApp Helpline <a href="https://api.whatsapp.com/send?phone=+919425631310">9425631310</a> </p>
+      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants
+must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy.
+Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will
+be available to all the participants on post login screen. Registered participants can also seek
+guidance on Telegram Helpline @AstroQuiz / 9425631310. </p>
 
       <h3>How to participate :</h3>
       <p>Interested students shall register for the Quiz on the Portal given on our website. Only one registration will be permitted on any mobile number. The schedule of the online Quiz will be as under :</p>
         <table border="1" style="border-collapse: collapse;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Online Registration</td>
-                <td style="padding:12px;color:#fff;"><b>Up to 20 August 2020</b></td>
+                <td style="padding:12px;color:#fff;"><b>5th Oct to 15 Oct 2021</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Intimation of <br> Quiz-slots to registered participants</td>
-                <td style="padding:12px;color:#fff;"><b>21 Aug to 23 Aug 2020</b></td>
+                <td style="padding:12px;color:#fff;"><b>15 Oct to 20 Oct 2021</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Attempting of Online Quiz</td>
-                <td style="padding:12px;color:#fff;"><b>25 Aug to 5 Sep 2020</b></td>
+                <td style="padding:12px;color:#fff;"><b>20 Oct to 30 Oct 2021</b></td>
             </tr>
         </table>
       </p>
-      <p>Upon submitting data for registration, Aryabhat will scrutinize it and send the login password on registered mobile and email ID. Participants can then login to access the Demo Quiz and Study Material. The date-time slots will be intimated to all the registered participants individually by email or SMS. The participants shall attempt the Quiz on the date-time slots allotted to them.</p>
+      <p>Upon submitting data for registration, the participant will receive an on-screen message
+of confirmation. Aryabhat will scrutinize the data and send further communication on
+registered mobile and email ID only. The registered mobile number will be used as Login-ID
+for the Quiz, hence cannot be changed. Participants can login to access the Demo Quiz and
+Study Material. The date-time slots will be intimated to all the registered participants
+individually by email / message. The participants shall attempt the Quiz on the date-time slots
+allotted to them.</p>
       <p>Any student facing difficulty in participation, shall contact <b>Aryabhat</b> for help.</p>
 
      <h4>Aryabhat Contact information </h4>
