para updated in quiz

--- a/quiz.html
+++ b/quiz.html
@@ -72,14 +72,22 @@ We shall not be able to send them by any other means.</p>
       <p>Students from class 6 to class 9 (both inclusive) from any school situated in Madhya Pradesh are eligible to take part in the quiz.</p>
 
       <h3>Entry Fee :</h3>
-      <p>Keeping in view the pandemic caused by Corona virus, the entry fee has been completely waived for all participants.</p>
+      <p>Waived for all participants.</p>
 
       <h3>Online Preliminary Test :</h3>
-      <p>The Astronomy Quiz consists of questions on basic Astronomy &amp; Space Science, which shall be a part of general awareness of a school student.</p>
-      <p>Preliminary test consists of 20 objective type questions for each participant, to be attempted in 150 seconds. Five marks will be awarded for a correct answer and two marks will be deducted for wrong one. Score will appear on-screen upon finishing the test. Preliminary test shall be attempted online on the date and time on any Mobile, Laptop or Desktop Computer. The Preliminary Test may also be conducted at our test centres for participants unable to attempt the Quiz online for some valid reason. </p>
+      <p>The Astronomy Quiz consists of questions on basic Astronomy &amp; Space Science, which
+shall be a part of general awareness for a school student.</p>
+      <p>Preliminary test consists of 20 objective type questions for each participant, to be
+attempted in 180 seconds. Five marks will be awarded for a correct answer and two marks
+will be deducted for wrong one. Score will appear on-screen upon finishing the test.
+Preliminary test shall be attempted online on the date and time on any Mobile, Laptop or
+Desktop Computer. The Preliminary Test may also be conducted at our test centres for
+participants unable to attempt the Quiz online for some valid reason. </p>
 
       <h3>The Prizes :</h3>
-      <p>The final-winners of the quiz shall visit the observatory of their choice from those at Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners on the basis of overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
+      <p>The final-winners of the quiz shall visit the observatory of their choice from those at
+Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups.
+Page 1 of 2Observatories will be allotted to winners on the basis of overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
 
       <h3>How to prepare :</h3>
       <p>The questions in the quiz are based on Astronomy, Space & related science. Participants
@@ -89,7 +97,8 @@ be available to all the participants on post login screen. Registered participan
 guidance on Telegram Helpline @AstroQuiz / 9425631310. </p>
 
       <h3>How to participate :</h3>
-      <p>Interested students shall register for the Quiz on the Portal given on our website. Only one registration will be permitted on any mobile number. The schedule of the online Quiz will be as under :</p>
+      <p>Interested students shall register for the Quiz on the Portal given on our website, using a
+mobile number and email ID. The schedule of the online Quiz will be as under :</p>
         <table border="1" style="border-collapse: collapse;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Online Registration</td>
