center align, typo fix

--- a/quiz.html
+++ b/quiz.html
@@ -86,8 +86,7 @@ participants unable to attempt the Quiz online for some valid reason. </p>
 
       <h3>The Prizes :</h3>
       <p>The final-winners of the quiz shall visit the observatory of their choice from those at
-Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups.
-Page 1 of 2Observatories will be allotted to winners on the basis of overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
+Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners on the basis of overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
 
       <h3>How to prepare :</h3>
       <p>The questions in the quiz are based on Astronomy, Space & related science. Participants
@@ -99,7 +98,7 @@ guidance on Telegram Helpline @AstroQuiz / 9425631310. </p>
       <h3>How to participate :</h3>
       <p>Interested students shall register for the Quiz on the Portal given on our website, using a
 mobile number and email ID. The schedule of the online Quiz will be as under :</p>
-        <table border="1" style="border-collapse: collapse;">
+        <table border="1" style="border-collapse: collapse;margin-left: auto;margin-right: auto;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Online Registration</td>
                 <td style="padding:12px;color:#fff;"><b>5th Oct to 15 Oct 2021</b></td>
