--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
+      <p>
+<b> Astro Quiz 2021-22 is here! </b><br>
+Registrations now open<br><br>
+<a target="_" class="button button-primary" href="https://quiz.aryabhat.org">Astro Quiz</a>
+      </p>
       <!--p>
 <b>Results for Astro Quiz 2020-21 Declared! </b><br>
 Congratulations to all the winners. A girl has topped this astro quiz again after 23 years !<br><br>
