removed register notice

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
       <p>
-<b> Astro Quiz 2021-22 is here! </b><br>
+<!--b> Astro Quiz 2021-22 is here! </b><br>
 Registrations now open<br><br>
-<a target="_" class="button button-primary" href="https://quiz.aryabhat.org">Astro Quiz</a>
+<a target="_" class="button button-primary" href="https://quiz.aryabhat.org">Astro Quiz</a-->
       </p>
       <!--p>
 <b>Results for Astro Quiz 2020-21 Declared! </b><br>
