prelim result declared

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 Registrations now open<br><br>
 <a target="_" class="button button-primary" href="https://quiz.aryabhat.org">Astro Quiz</a-->
       </p>
-      <!--p>
-<b>Results for Astro Quiz 2020-21 Declared! </b><br>
-Congratulations to all the winners. A girl has topped this astro quiz again after 23 years !<br><br>
-<a target="_" class="button button-primary" href="files/2020/MeritList2020.pdf">Merit List</a>
+      <p>
+<b>Results for Preliminary Astro Quiz 2021-22 Declared! </b><br>
+Congratulations to all the winners<br><br>
+<a target="_" class="button button-primary" href="files/2021/Result declaration-Prelims-Astro Quiz 2021-22.pdf">Merit List</a>
       </p-->
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
