--- a/download.html
+++ b/download.html
@@ -56,6 +56,8 @@
           <a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a>
 					<br>
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/Circular_AstroQuiz_2022-23.pdf">Circular Astro Quiz 2022-23</a>
         </td>
       </tr>
       <tr>
